# church

./: Cargo.toml  README.md
benches/: compute.rs
src/: basic.rs  compose.rs  compute.rs  hlist.rs  lib.rs  recursive.rs
src/compute/: ops.rs
src/funcs/: basic.rs  common.rs  mod.rs
