[package]
name = "church"
version = "0.2.0"
authors = ["max-heller <max.a.heller@gmail.com>"]
edition = "2021"

[lib]
name = "church"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk_core = "0.4.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
static_assertions = "1.1.0"
